--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ social:
 # Site Verification Settings
 webmaster_verifications:
   google: "iBIVUI0J1hZI0gkafo3mZI7f26MMtbFlveidcOLO4wc"
-  bing: # fill in your Bing verification code
+  bing: "357A91751A382EE9C8C677D4EFD85434"
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
   baidu: # fill in your Baidu verification code
